<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/edaimg"
        android:layout_width="349dp"
        android:layout_height="214dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/edafos"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/Create_Username"
        android:layout_width="match_parent"
        android:maxLength="20"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_height="76dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/edaimg"
        android:background="@drawable/username_border"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="20dp"
        android:singleLine="true"
        android:nextFocusForward="@id/Mobile_Number"
        android:hint="@string/Username"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        />


    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/Mobile_Number"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/username_border"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/Create_Username"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="20dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:maxLength="35"
        android:nextFocusForward="@id/Create_Password"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/Create_Password"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/Mobile_Number"
        android:background="@drawable/username_border"
        android:drawableLeft="@drawable/pass"
        android:drawablePadding="20dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:maxLength="12"
        android:nextFocusForward="@id/Confirm_Password"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/Confirm_Password"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_below="@id/Create_Password"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/username_border"
        android:drawableLeft="@drawable/confirm_pass"
        android:drawablePadding="20dp"
        android:hint="@string/Confirm_Password"
        android:inputType="textPassword"
        android:maxLength="12"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_below="@id/Confirm_Password"
        android:layout_marginTop="20dp"


        >
        <ProgressBar
            android:id="@+id/Signup_Progbar"
            style="?android:attr/progressBarStyle"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="20dp"
          />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/ripple_effect"
            android:text="@string/signup"
            android:textColor="#D39D3D"
            android:textSize="20sp"
            android:elevation="10dp"
            />



    </RelativeLayout>



</RelativeLayout>